[package]
name = "server_app"
version = "0.0.46-dev"
edition = "2021"

[dependencies]
errmeta_derive = { workspace = true }
llama_server_proc = { workspace = true }
services = { workspace = true }
server_core = { workspace = true }
routes_app = { workspace = true }
async-openai = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
derive-new = { workspace = true }
dialoguer = { workspace = true, features = ["history"] }
futures-util = { workspace = true }
include_dir = { workspace = true }
indicatif = { workspace = true }
mockall = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["form"] }
rstest = { workspace = true, optional = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-serve-static = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
services = { workspace = true, features = ["test-utils"] }
routes_app = { workspace = true, features = ["test-utils"] }
server_core = { workspace = true, features = ["test-utils"] }
auth_middleware = { workspace = true }
llama_server_proc = { workspace = true, features = ["test-utils"] }
mcp_client = { workspace = true }

anyhow = { workspace = true }
anyhow_trace = { workspace = true }
chrono = { workspace = true }
cookie = { workspace = true }
dirs = { workspace = true }
dotenv = { workspace = true }
fs_extra = { workspace = true }
maplit = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }
rand = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true }
serial_test = { workspace = true }
sha2 = { workspace = true }
sea-orm = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
tower = { workspace = true }
tower-sessions = { workspace = true }
uuid = { workspace = true }

[features]
test-utils = ["rstest", "mockall", "routes_app/test-utils"]
