[package]
name = "server_core"
version = "0.0.41-dev"
edition = "2021"

[dependencies]
errmeta_derive = { workspace = true }
objs = { workspace = true }
llama_server_proc = { workspace = true }
services = { workspace = true }

anyhow = { workspace = true, optional = true }
async-openai = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true, optional = true }
include_dir = { workspace = true }
mime = { workspace = true }
mockall = { workspace = true, optional = true }
pin-project-lite = { workspace = true }
reqwest = { workspace = true }
rstest = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sync_wrapper = { workspace = true }
tempfile = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tracing = { workspace = true, features = ["async-await", "log"] }
validator = { workspace = true, features = ["derive"] }

[dev-dependencies]
llama_server_proc = { workspace = true, features = ["test-utils"] }
objs = { workspace = true, features = ["test-utils"] }

services = { workspace = true, features = ["test-utils"] }

anyhow = { workspace = true }
anyhow_trace = { workspace = true }

futures-util = { workspace = true }
http-body-util = { workspace = true }
mockall = { workspace = true }

reqwest = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true, features = ["indexmap"] }

serial_test = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true, features = ["util"] }

[features]
test-utils = [
  "llama_server_proc/test-utils",
  "objs/test-utils",

  "services/test-utils",
  "anyhow",
  "mockall",
  "rstest",
  "http-body-util",
  "tempfile",
]
