[package]
name = "services"
version = "0.1.0"
edition = "2021"

[dependencies]
objs = { workspace = true }
errmeta_derive = { workspace = true }
llama_server_proc = { workspace = true }

aes-gcm = { workspace = true }
anyhow = { workspace = true, optional = true }
axum = { workspace = true }
base64 = { workspace = true }
derive-new = { workspace = true }
async-trait = { workspace = true }
cookie = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
derive_builder = { workspace = true }
dirs = { workspace = true }
dotenv = { workspace = true }
fluent = { workspace = true }
fs2 = { workspace = true }
jsonwebtoken = { workspace = true }
hf-hub = { workspace = true, features = ["tokio"] }
include_dir = { workspace = true }
keyring = { workspace = true, default-features = false }
mini-moka = { workspace = true }
mockall = { workspace = true, optional = true }
oauth2 = { workspace = true }
once_cell = { workspace = true, optional = true }
pbkdf2 = { workspace = true, features = ["simple"] }
reqwest = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true, optional = true }
rstest = { workspace = true, optional = true }
sha2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true, features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "migrate",
  "chrono",
] }
strum = { workspace = true }
tap = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
thiserror = { workspace = true }
time = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true, features = ["sqlite"] }
tracing = { workspace = true, features = ["async-await", "log"] }
ureq = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
unic-langid = { workspace = true }
validator = { workspace = true, features = ["derive"] }
walkdir = { workspace = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
objs = { workspace = true, features = ["test-utils"] }

axum-test = { workspace = true }
axum-extra = { workspace = true }
anyhow = { workspace = true }
anyhow_trace = { workspace = true }
base64 = { workspace = true }
fs2 = { workspace = true }
fluent = { workspace = true }
maplit = { workspace = true }
mockall = { workspace = true }
mockito = { workspace = true }
once_cell = { workspace = true }
pretty_assertions = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rstest = { workspace = true }
rsa = { workspace = true }
serial_test = { workspace = true }
strfmt = { workspace = true }
tap = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["linux-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[features]
test-utils = [
  "rstest",
  "mockall",
  "once_cell",
  "rsa",
  "tap",
  "tempfile",
  "anyhow",
  "objs/test-utils",
  "tokio",
]
