[package]
name = "services"
version = "0.0.46-dev"
edition = "2021"

[[bin]]
name = "setup_client"
path = "bin/setup_client.rs"

[dependencies]
objs = { workspace = true }
errmeta_derive = { workspace = true }
llama_server_proc = { workspace = true }
mcp_client = { workspace = true }

aes-gcm = { workspace = true }
async-openai = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true, optional = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
derive-new = { workspace = true }
async-trait = { workspace = true }
cookie = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
derive_builder = { workspace = true }
dirs = { workspace = true }
dotenv = { workspace = true }
fs2 = { workspace = true }
jsonwebtoken = { workspace = true }
hf-hub = { workspace = true, features = ["tokio"] }
include_dir = { workspace = true }
keyring = { workspace = true, default-features = false }
mini-moka = { workspace = true }
mockall = { workspace = true, optional = true }
oauth2 = { workspace = true }
once_cell = { workspace = true, optional = true }
pbkdf2 = { workspace = true, features = ["password-hash", "sha2"] }
reqwest = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true, optional = true }
rstest = { workspace = true, optional = true }
sha2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true, features = ["chrono", "runtime-tokio", "sqlite"] }
strum = { workspace = true }
tap = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
thiserror = { workspace = true }
time = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true, features = ["sqlite"] }
tracing = { workspace = true, features = ["async-await", "log"] }
uuid = { workspace = true, features = ["v4"] }
walkdir = { workspace = true }
tokio = { workspace = true, features = ["full"], optional = true }
utoipa = { workspace = true }
url = { workspace = true }
urlencoding = "2.1.3"

[dev-dependencies]
objs = { workspace = true, features = ["test-utils"] }
mcp_client = { workspace = true, features = ["test-utils"] }

anyhow = { workspace = true }
anyhow_trace = { workspace = true }
base64 = { workspace = true }
fs2 = { workspace = true }

maplit = { workspace = true }
mockall = { workspace = true }
mockito = { workspace = true }
once_cell = { workspace = true }
pretty_assertions = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rstest = { workspace = true }
rsa = { workspace = true }

strfmt = { workspace = true }
tap = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["linux-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[features]
default = ["tokio"]
test-utils = [
  "rstest",
  "mockall",
  "once_cell",
  "rsa",
  "tap",
  "tempfile",
  "anyhow",
  "objs/test-utils",
  "mcp_client/test-utils",
  "tokio",
]
