[package]
name = "services"
version = "0.0.46-dev"
edition = "2021"

[[bin]]
name = "setup_client"
path = "bin/setup_client.rs"

[dependencies]
errmeta = { workspace = true }
errmeta_derive = { workspace = true }
llama_server_proc = { workspace = true }
mcp_client = { workspace = true }

aes-gcm = { workspace = true }
async-openai = { workspace = true }
axum = { workspace = true }
byteorder = { workspace = true }
memmap2 = { workspace = true }
anyhow = { workspace = true, optional = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
derive-new = { workspace = true }
async-trait = { workspace = true }
cookie = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
derive_builder = { workspace = true }
dirs = { workspace = true }
dotenv = { workspace = true }
jsonwebtoken = { workspace = true }
hf-hub = { workspace = true, features = ["tokio"] }
include_dir = { workspace = true }
keyring = { workspace = true, default-features = false }
mini-moka = { workspace = true }
fs_extra = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
mockall = { workspace = true, optional = true }
oauth2 = { workspace = true }
tracing-subscriber = { workspace = true, features = ["matchers", "once_cell", "regex", "tracing", "env-filter"], optional = true }
once_cell = { workspace = true }
pbkdf2 = { workspace = true, features = ["password-hash", "sha2"] }
regex = { workspace = true }
reqwest = { workspace = true, features = ["form"] }
rand = { workspace = true }
rsa = { workspace = true, optional = true }
rstest = { workspace = true, optional = true }
sha2 = { workspace = true }
sea-orm = { workspace = true, features = [
  "sqlx-sqlite", "sqlx-postgres",
  "runtime-tokio-rustls",
  "with-chrono", "with-json",
  "macros",
] }
sea-orm-migration = { workspace = true, features = [
  "sqlx-sqlite", "sqlx-postgres",
  "runtime-tokio-rustls",
  "with-chrono", "with-json",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true, features = ["chrono", "runtime-tokio", "sqlite", "postgres"] }
strum = { workspace = true }
tap = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
thiserror = { workspace = true }
time = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true, features = ["sqlite", "postgres"] }
tracing = { workspace = true, features = ["async-await", "log"] }
uuid = { workspace = true, features = ["v4"] }
walkdir = { workspace = true }
tokio = { workspace = true, features = ["full"], optional = true }
utoipa = { workspace = true }
url = { workspace = true }
validator = { workspace = true, features = ["derive"] }
urlencoding = "2.1.3"
ulid.workspace = true

[dev-dependencies]
mcp_client = { workspace = true, features = ["test-utils"] }

anyhow = { workspace = true }
anyhow_trace = { workspace = true }
base64 = { workspace = true }
fs_extra = { workspace = true }
maplit = { workspace = true }
mockall = { workspace = true }
mockito = { workspace = true }
once_cell = { workspace = true }
pretty_assertions = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rstest = { workspace = true }
rsa = { workspace = true }

axum-extra = { workspace = true }
http-body-util = { workspace = true }
serial_test = { workspace = true }
strfmt = { workspace = true }
tap = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tower = { workspace = true, features = ["util"] }
tracing-subscriber = { workspace = true, features = ["matchers", "once_cell", "regex", "tracing", "env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["linux-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[features]
default = ["tokio"]
test-utils = [
  "rstest",
  "mockall",
  "rsa",
  "tap",
  "tempfile",
  "anyhow",
  "fs_extra",
  "http-body-util",
  "tracing-subscriber",
  "mcp_client/test-utils",
  "tokio",
]
