[package]
name = "bodhi"
version = "0.1.0"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
errmeta_derive = { workspace = true }
objs = { workspace = true }
llama_server_proc = { workspace = true }
services = { workspace = true }
commands = { workspace = true }
server_core = { workspace = true }
auth_middleware = { workspace = true }
routes_oai = { workspace = true }
routes_app = { workspace = true }
routes_all = { workspace = true }
server_app = { workspace = true }

include_dir = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri = { version = "2.0.6", features = ["tray-icon"], optional = true }
tauri-plugin-log = { version = "2.0.0-rc", optional = true }

axum = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dotenv = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true, features = ["async-await", "log"] }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tower-serve-static = { workspace = true }
derive-new = { workspace = true }
# futures-util = { workspace = true }
webbrowser = { workspace = true, optional = true }

[dev-dependencies]
objs = { workspace = true, features = ["test-utils"] }

rstest = { workspace = true }
anyhow = { workspace = true }
anyhow_trace = { workspace = true }

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }
anyhow = { workspace = true }
fs_extra = { workspace = true }

[features]
native = ["tauri", "tauri/tray-icon", "tauri-plugin-log", "webbrowser"]
test-utils = []
production = []
