[package]
name = "bodhi"
version = "0.0.40-dev"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
errmeta_derive = { workspace = true }
objs = { workspace = true }
lib_bodhiserver = { workspace = true }

include_dir = { workspace = true }
tauri = { workspace = true, features = ["tray-icon"], optional = true }
tauri-plugin-log = { workspace = true, optional = true }

clap = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
tracing = { workspace = true, features = ["async-await", "log"] }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }

# futures-util = { workspace = true }
webbrowser = { workspace = true, optional = true }

[dev-dependencies]
objs = { workspace = true, features = ["test-utils"] }

rstest = { workspace = true }
anyhow = { workspace = true }


[build-dependencies]
anyhow = { workspace = true }
fs2 = { workspace = true }
fs_extra = { workspace = true }
tauri-build = { workspace = true }

[features]
native = ["tauri", "tauri/tray-icon", "tauri-plugin-log", "webbrowser"]
test-utils = []
production = []

[package.metadata.cargo-machete]
ignored = ["fs2", "fs_extra"]
