[package]
name = "bodhiui"
version = "0.1.0"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri = { version = "2.0.6", features = [], optional = true }
tauri-plugin-log = { version = "2.0.0-rc", optional = true }

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }
anyhow = { workspace = true }
fs_extra = { workspace = true }

[features]
native = ["tauri", "tauri-plugin-log"]
