[package]
name = "droid"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
llamacpp-sys = { workspace = true }
objs = { workspace = true }
services = { workspace = true }
commands = { workspace = true }
server_core = { workspace = true }
auth_middleware = { workspace = true }
routes_oai = { workspace = true }
routes_app = { workspace = true }
routes_all = { workspace = true }
server_app = { workspace = true }

log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tauri = { version = "2.0.3", features = [] }
tauri-plugin-log = "2.0.0-rc"

[build-dependencies]
anyhow = { workspace = true }
fs_extra = { workspace = true }
phf = { workspace = true, features = ["macros"] }
tauri-build = { version = "2.0.1", features = [] }
